2010-01-05  Helmut Eller  <heller@common-lisp.net>

	Stop the beeping on restart.

	* slime.el (slime-quit-lisp-internal): Don't kill already dead
	processes.

2010-01-03  Stas Boukarev  <stassats@gmail.com>

	* swank-backend.lisp (frame-call): New function.
	Returns a string representing a call to the entry point of a frame.
	* swank-ccl.lisp (frame-call): Implementation of the above.
	* swank-sbcl.lisp (frame-call): Ditto.

2010-01-03  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (with-swank-protocol-error-handler): Remove debugging
	bits.

2010-01-03  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-next-read-or-lose): Call `debug' with the error
	condition, so we can see what actually caused the losage.

2010-01-03  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (compile-defun [test]): Also test proper notification
	after reader-error. Additionally: bind font-lock-verbose to nil to
	prevent annoying font-lock messages during the test.

	* swank-sbcl.lisp (signal-compiler-condition): Make sure
	READER-ERROR comes before ERROR in typecase.
	(swank-compile-file): Remove handling FATAL-COMPILER-HANDLER
	because a) this handling prevents sbcl from printing the
	diagnostics to the repl, and b) sbcl itself should handle this and
	translate it into proper return value for compile-file.

2009-12-23  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (complete-symbol [test]): Fix test case.

2009-12-22  Helmut Eller  <heller@common-lisp.net>

	Some new backend functions used for loading image files.

	* swank-backend.lisp (socket-fd, make-fd-stream, dup, exec-image)
	(command-line-args): New functions.
	* swank-cmucl.lisp: Impemented.
	* swank-cmucl.lisp (reset-sigio-handlers): New function.
	(save-image): Fix quoting bug.

	* swank.lisp (clear-event-history): New functoin.
	(interactive-eval, eval-region): Don't use FRESH-LINE.

2009-12-21  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-at-list-p): Deleted.